refactor: se remueve el ida al service para recuperar los tags de los testimonios